tests/errmsgs/t23419.nim
discard """
  errormsg: "invalid type: 'void' in this context: '(array[0..-1, void],)' for var"
"""

var a: (array[0, void], )
